Replace im4java with ol.vips